# scanpy_mcp

./: README.md  main.py  pyproject.toml  requirements.txt  server.py
tools/: prep.py  read.py
utils/: prep.py
