[project]
name = "scanpy-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata==0.10.9",
    "igraph==0.11.6",
    "ipykernel>=6.29.5",
    "mcp[cli]>=1.7.1",
    "numpy==2.0.2",
    "pandas==2.2.3",
    "pynndescent==0.5.13",
    "scanpy==1.10.3",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "statsmodels==0.14.3",
]
